initial commit - create a generate proof request
